--- a/test/control.html
+++ b/test/control.html
@@ -98,8 +98,8 @@
                   </select>
                 </div>
                 <div class="form-check">
-                  <input id="newestOnTop" class="form-check-input" type="checkbox" disabled />
-                  <label class="form-check-label" for="newestOnTop">Newest on top <span class="note">(coming soon)</span></label>
+                  <input id="newestOnTop" class="form-check-input" type="checkbox" />
+                  <label class="form-check-label" for="newestOnTop">Newest on top</label>
                 </div>
               </div>
             </div>
@@ -114,7 +114,7 @@
       </div>
 
       <div class="note">
-        Note: This control page demonstrates automatic layout (inferred from title and icon settings) and options including title, message, position, variant, delay, extended timeout, pause on hover, dismissible, progress bar, and prevent duplicates (with optional dedupe key and behavior). "Newest on top" will be added in a later version.
+        Note: This control page demonstrates automatic layout (inferred from title and icon settings) and options including title, message, position, variant, delay, extended timeout, pause on hover, dismissible, progress bar, and prevent duplicates (with optional dedupe key and behavior).
       </div>
     </div>
 
@@ -158,7 +158,8 @@
             iconClass: $('#iconClass').value.trim(),
             preventDuplicates: $('#preventDup').checked,
             dedupeKey: $('#dedupeKey').value.trim(),
-            onDuplicate: $('#onDuplicate').value
+            onDuplicate: $('#onDuplicate').value,
+            newestOnTop: $('#newestOnTop').checked
           };
           const api = btoast[type] || btoast.success;
           api(msg, opts);
