--- a/test/control.html
+++ b/test/control.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>btoast – Control Panel</title>
+  <title>btoast-js – Control Panel</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- btoast CSS -->
@@ -44,7 +44,7 @@
 
 <body class="bg-light">
   <div class="panel">
-    <h1 class="h3 mb-3">btoast – Control Test</h1>
+    <h1 class="h3 mb-3">btoast-js – Control Panel</h1>
 
     <div class="form-section mb-3">
       <div class="row g-3">
@@ -207,7 +207,7 @@
 
   <!-- Bootstrap Bundle (incl. Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- UMD build of btoast -->
+  <!-- UMD build of btoast-js -->
   <script src="../dist/btoast.umd.js"></script>
   <script>
     // All comments must be in English
@@ -256,7 +256,7 @@
             // Create a function: (evt, ctx) => { /* snippet */ }
             opts.onClick = new Function('evt', 'ctx', snippet);
           } catch (e) {
-            console.error('[btoast] Invalid onClick snippet:', e);
+            console.error('[btoast-js] Invalid onClick snippet:', e);
           }
         }
         // Approve / Deny actions
@@ -268,12 +268,12 @@
         const onApproveSnippet = $('#onApproveSnippet').value.trim();
         if (onApproveSnippet) {
           try { opts.onApprove = new Function('evt', 'ctx', onApproveSnippet); }
-          catch (e) { console.error('[btoast] Invalid onApprove snippet:', e); }
+          catch (e) { console.error('[btoast-js] Invalid onApprove snippet:', e); }
         }
         const onDenySnippet = $('#onDenySnippet').value.trim();
         if (onDenySnippet) {
           try { opts.onDeny = new Function('evt', 'ctx', onDenySnippet); }
-          catch (e) { console.error('[btoast] Invalid onDeny snippet:', e); }
+          catch (e) { console.error('[btoast-js] Invalid onDeny snippet:', e); }
         }
         const api = btoast[type] || btoast.success;
         api(msg, opts);
