--- a/test/control.html
+++ b/test/control.html
@@ -183,6 +183,10 @@
                 </div>
               </div>
               <div class="form-check">
+                <input id="rtl" class="form-check-input" type="checkbox" />
+                <label class="form-check-label" for="rtl">RTL (per toast)</label>
+              </div>
+              <div class="form-check">
                 <input id="debug" class="form-check-input" type="checkbox" />
                 <label class="form-check-label" for="debug">Debug (console)</label>
               </div>
@@ -248,7 +252,8 @@
           onDuplicate: $('#onDuplicate').value,
           newestOnTop: $('#newestOnTop').checked,
           dismissOnClick: $('#dismissOnClick').checked,
-          debug: $('#debug').checked
+          debug: $('#debug').checked,
+          rtl: $('#rtl').checked,
         };
         const snippet = $('#onClickSnippet').value.trim();
         if (snippet) {
